#machine generated

add_subdirectory("a")
add_subdirectory("anotherpkg")
add_subdirectory("b")
add_subdirectory("c")
add_subdirectory("c1")
add_subdirectory("c2")
add_subdirectory("cl")
add_subdirectory("com")
add_subdirectory("common")
add_subdirectory("comSA")
add_subdirectory("comSB")
add_subdirectory("custom")
add_subdirectory("d1")
add_subdirectory("d2")
add_subdirectory("e1")
add_subdirectory("e2")
add_subdirectory("foo")
add_subdirectory("handlers")
add_subdirectory("helper")
add_subdirectory("indify")
add_subdirectory("java")
add_subdirectory("jdk")
add_subdirectory("LambdaReceiver_anotherpkg")
add_subdirectory("org")
add_subdirectory("p")
add_subdirectory("p1")
add_subdirectory("p2")
add_subdirectory("p3")
add_subdirectory("package1")
add_subdirectory("package2")
add_subdirectory("pkg")
add_subdirectory("pkg1")
add_subdirectory("pkg2")
add_subdirectory("q")
add_subdirectory("q1")
add_subdirectory("q2")
add_subdirectory("repeatingAnnotations")
add_subdirectory("SpecialInterfaceCall")
add_subdirectory("subpackage")
add_subdirectory("sun")
add_subdirectory("T8032697_anotherpkg")
add_subdirectory("tck")
add_subdirectory("test")
add_subdirectory("TestC1")
add_subdirectory("testPkg")
add_subdirectory("UniTest")
add_subdirectory("util")

aux_source_directory("${CMAKE_CURRENT_SOURCE_DIR}" test-classes_SRCS)
file(GLOB test-classes_HEADERS *.h *.hpp)
source_group("Include" FILES ${test-classes_HEADERS}) 
list(LENGTH test-classes_SRCS test-classes_SRCS_LENGTH)
if(test-classes_SRCS_LENGTH)
	add_library(test-classes OBJECT "${test-classes_SRCS}" "${test-classes_HEADERS}")
	jcpp_enable_bigobj(test-classes)
endif()